2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* i386_regs.c (i386_register_info): Add fallthrough comment.
	* i386_retval.c (i386_return_value_location): Move fallthrough
	comment.
	* linux-core-note.c (core_note): Adjust fallthrough comment.
	* m68k_retval.c (m68k_return_value_location): Move fallthrough
	comment.
	* ppc_regs.c (ppc_register_info): Add fallthrough comment.
	* x86_64_regs.c (x86_64_register_info): Likewise.

2016-08-09  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_attrs.c (sparc_check_object_attribute): Fix the
	calculation of GNU_SParc_HWCAPS and GNU_SParc_HWCAPS2 values as
	comma-separated list of hw capability names.

2016-07-10  Andreas Schwab  <schwab@linux-m68k.org>

	* m68k_corenote.c (ALIGN_PRSTATUS): Define.
	* linux-core-note.c (struct EBLHOOK(prstatus)): Set alignment to
	ALIGN_PRSTATUS if defined.

2016-06-28  Richard Henderson <rth@redhat.com>

	* Makefile.am (modules): Add bpf.
	(libebl_pic): Add libebl_bpf_pic.a.
	(am_libebl_bpf_pic_a_OBJECTS): New.
	* bpf_init.c, bpf_regs.c, bpf_reloc.def: New files.
	* common-reloc.c (copy_reloc_p): Honor NO_COPY_RELOC.
	(init_reloc): Likewise.

2016-05-20  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.am (modules): Add m68k.
	(libebl_pic): Add libebl_m68k_pic.a.
	(m68k_SRCS, libebl_m68k_pic_a_SOURCES)
	(am_libebl_m68k_pic_a_OBJECTS): Define.
	* m68k_init.c: New file.
	* m68k_symbol.c: New file.
	* m68k_regs.c: New file.
	* m68k_retval.c: New file.
	* m68k_corenote.c: New file.
	* m68k_reloc.def: New file.
	* linux-core-note.c (ALIGN_INT): Only define if not defined.

2016-02-26  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_initreg.c (EBLHOOK): Provide a dummy
	sparc_set_initial_registers_tid for sparc32.  This fixes the build
	in sparcv9-*-* targets.

2016-02-26  Andreas Schwab  <schwab@suse.de>

	* ppc_symbol.c (ppc_dynamic_tag_name): Add DT_PPC_OPT.
	(ppc_dynamic_tag_check): Likewise.

2015-12-28  Mark Wielaard  <mjw@redhat.com>

	* i386_reloc.def: Add GOT32X.